--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="theme-color" content="#000" />
+
 <!-- CSS START -->
 <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
 <link href="assets/css/animate.css" rel="stylesheet" />
