--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="row justify-content-center">
             <div class="col-lg-6">
               <div class="contant_form_row">
-                <input name="name" type="text" placeholder="Your Name" class="input-group">
+                <input name="name" type="text" placeholder="Your Name" class="input-group" required>
               </div>
             </div>
             <div class="col-lg-6">
@@ -190,17 +190,17 @@
             </div>
             <div class="col-lg-6">
               <div class="contant_form_row">
-                <input name="_replyto" type="email" placeholder="Email Address" class="input-group">
+                <input name="_replyto" type="email" placeholder="Email Address" class="input-group" required>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="contant_form_row">
-                <input name="subject" type="text" placeholder="Subject" class="input-group">
+                <input name="subject" type="text" placeholder="Subject" class="input-group" required>
               </div>
             </div>
             <div class="col-lg-10">
               <div class="contant_form_row">
-                <textarea name="body" placeholder="Message" class="textarea-group"></textarea>
+                <textarea name="body" placeholder="Message" class="textarea-group" required></textarea>
               </div>
             </div>
             <div class="col-lg-10">
